@@ -19,6 +19,7 @@
  *      with this program; if not, write to the Free Software Foundation, Inc.,
  *      675 Mass Ave, Cambridge, MA 02139, USA.
  *
+ * $Header$
  */
 
 #ifndef _PARSE_H
